@@ -3,15 +3,24 @@ package org.skypulse.handlers.logs;
 import io.undertow.server.HttpHandler;
 import io.undertow.server.HttpServerExchange;
 import org.skypulse.config.database.DatabaseUtils;
+import org.skypulse.rest.auth.RequireRoles;
 import org.skypulse.utils.HttpRequestUtil;
 import org.skypulse.utils.JsonUtil;
 import org.skypulse.utils.ResponseUtil;
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
 
+
+/**
+ * Parse JSONB field dynamically: converts JSON objects to Map and JSON arrays to List<Map>.
+ * */
+
+@RequireRoles({"ADMIN"})
 public class GetAuditLogsHandler implements HttpHandler {
 
     private static final Logger logger = LoggerFactory.getLogger(GetAuditLogsHandler.class);
@@ -34,6 +43,8 @@ public class GetAuditLogsHandler implements HttpHandler {
             "a.date_created", java.sql.Timestamp.class
     );
 
+    private static final ObjectMapper mapper = JsonUtil.mapper();
+
     @Override
     public void handleRequest(HttpServerExchange exchange) throws Exception {
 
@@ -50,7 +61,6 @@ public class GetAuditLogsHandler implements HttpHandler {
             String shortName = entry.getKey();
             String dbColumn = entry.getValue();
             String value = DatabaseUtils.getParam(params, shortName);
-
             if (value != null && !value.isBlank()) {
                 filterRules.add(new DatabaseUtils.FilterRule(dbColumn, "=", value));
             }
@@ -77,15 +87,14 @@ public class GetAuditLogsHandler implements HttpHandler {
         String baseSql = " FROM audit_log a LEFT JOIN users u ON a.user_id = u.user_id ";
 
         String countSql = "SELECT COUNT(*) AS total " + baseSql + " WHERE 1=1 " + filterResult.sql();
-        List<Object> countParams = filterResult.params();
-        int total = ((Number) DatabaseUtils.query(countSql, countParams).get(0).get("total")).intValue();
+        int total = ((Number) DatabaseUtils.query(countSql, filterResult.params()).getFirst().get("total")).intValue();
 
-        String dataSql = "SELECT " +
-                "a.audit_log_id, a.user_id, a.entity, a.entity_id, a.action, " +
-                "a.before_data, a.after_data, a.ip_address, a.date_created, " +
-                "u.user_email, CONCAT(u.first_name, ' ', u.last_name) AS user_full_name " +
-                baseSql + " WHERE 1=1 " + filterResult.sql() +
-                orderBy + " LIMIT ? OFFSET ?";
+        String dataSql = """
+        SELECT a.audit_log_id, a.user_id, a.entity, a.entity_id, a.action,
+               a.before_data, a.after_data, a.ip_address, a.date_created,
+               u.user_email, CONCAT(u.first_name, ' ', u.last_name) AS user_full_name
+        """ + baseSql + " WHERE 1=1 " + filterResult.sql() + orderBy + " LIMIT ? OFFSET ?";
+
 
         List<Object> dataParams = new ArrayList<>(filterResult.params());
         dataParams.add(pageSize);
@@ -93,39 +102,41 @@ public class GetAuditLogsHandler implements HttpHandler {
 
         List<Map<String, Object>> logs = DatabaseUtils.query(dataSql, dataParams);
 
-        // Parse before_data and after_data JSON strings into objects
+        // Deserialize JSONB fields automatically detecting objects vs arrays
         for (Map<String, Object> log : logs) {
-            Object beforeDataObj = log.get("before_data");
-            Object afterDataObj = log.get("after_data");
-
-            if (beforeDataObj instanceof String) {
-                try {
-                    Map<String, Object> beforeDataMap = JsonUtil.mapper().readValue(
-                            (String) beforeDataObj, new TypeReference<Map<String, Object>>() {});
-                    log.put("before_data", beforeDataMap);
-                } catch (Exception e) {
-                    logger.error("Failed to parse before_data for audit_log_id {}: {}", log.get("audit_log_id"), e.getMessage(), e);
-                }
-            }
-
-            if (afterDataObj instanceof String) {
-                try {
-                    Map<String, Object> afterDataMap = JsonUtil.mapper().readValue(
-                            (String) afterDataObj, new TypeReference<Map<String, Object>>() {});
-                    log.put("after_data", afterDataMap);
-                } catch (Exception e) {
-                    logger.error("Failed to parse after_data for audit_log_id {}: {}", log.get("audit_log_id"), e.getMessage(), e);
-                }
-            }
+            parseJsonField(log, "before_data");
+            parseJsonField(log, "after_data");
         }
 
-        ResponseUtil.sendPaginated(
-                exchange,
-                "audit logs",
-                page,
-                pageSize,
-                total,
-                logs
-        );
+        ResponseUtil.sendPaginated(exchange, "audit_logs", page, pageSize, total, logs);
+    }
+
+
+    private void parseJsonField(Map<String, Object> log, String fieldName) {
+        Object obj = log.get(fieldName);
+        if (obj instanceof String) {
+            try {
+                String jsonStr = (String) obj;
+                if (jsonStr.trim().startsWith("[")) {
+                    // JSON Array
+                    List<Map<String, Object>> list = mapper.readValue(jsonStr, new TypeReference<List<Map<String, Object>>>() {});
+                    log.put(fieldName, list != null ? list : Collections.emptyList());
+                } else {
+                    // JSON Object
+                    Map<String, Object> map = mapper.readValue(jsonStr, new TypeReference<Map<String, Object>>() {});
+                    log.put(fieldName, map != null ? map : Collections.emptyMap());
+                }
+            } catch (Exception e) {
+                logger.error("Failed to parse {} for audit_log_id {}: {}", fieldName, log.get("audit_log_id"), e.getMessage(), e);
+                log.put(fieldName, jsonStrIsArray(obj) ? Collections.emptyList() : Collections.emptyMap());
+            }
+        } else if (obj == null) {
+            log.put(fieldName, Collections.emptyMap());
+        }
+    }
+
+    private boolean jsonStrIsArray(Object obj) {
+        if (!(obj instanceof String)) return false;
+        return ((String) obj).trim().startsWith("[");
     }
 }
